--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,8 @@ server.port=${PORT:8089}
 #spring.jpa.defer-datasource-initialization = true
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/SUserDB
+spring.datasource.url=jdbc:mysql://localhost:3306/suserdb?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/SUserDB
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -21,4 +22,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
